@@ -237,7 +237,7 @@ namespace Stetic.Editor
 		{
 			Widget wrapper = Stetic.Wrapper.Widget.Lookup (this);
 			using (wrapper.UndoManager.AtomicChange) {
-				Action ac = (Action) ObjectWrapper.Create (wrapper.Project, new Gtk.Action ("", "", null, null));
+				Wrapper.Action ac = (Wrapper.Action) ObjectWrapper.Create (wrapper.Project, new Gtk.Action ("", "", null, null));
 				ActionTreeNode node = new ActionTreeNode (Gtk.UIManagerItemType.Toolitem, "", ac);
 				actionTree.Children.Insert (pos, node);
 
